# Study

AdaptScreen/app/src/main/: AndroidManifest.xml
AdaptScreen/app/src/main/res/layout/: activity_main.xml
C++基础/: 内存.md  函数.md
C++基础/demo/: array.cpp  func.h  main.cpp
ExamDemo/app/src/main/: AndroidManifest.xml
ExamDemo/app/src/main/res/layout/: animator_activity.xml  gridview_item.xml  pwd_input_activity.xml
ExamDemo/app/src/main/res/values/: strings.xml
MaterialDesign/: CoordinatorLayout原理及自定义Behavior.md  Navigation-Drawer使用.md  Toolbar中添加菜单.md
MaterialDesign/MaterialDesignDemo/app/: build.gradle
MaterialDesign/MaterialDesignDemo/app/src/main/: AndroidManifest.xml
MaterialDesign/MaterialDesignDemo/app/src/main/res/layout/: activity_recyclerview.xml
MaterialDesign/MaterialDesignDemo/app/src/main/res/values/: strings.xml
MaterialDesign/MaterialDesignDemo/gradle/wrapper/: gradle-wrapper.properties
NDK开发/C++基础/: 函数.md
NDK开发/编译原理与语法详解/CMake详解/CMakeDemo/app/: build.gradle
NDK开发/编译原理与语法详解/CMake详解/CMakeDemo/app/src/main/: AndroidManifest.xml
NDK开发/编译原理与语法详解/CMake详解/CMakeDemo/app/src/main/cpp/: CMakeLists.txt
NDK开发/编译原理与语法详解/makefile语法详解/NdkDemo/app/: build.gradle
NDK开发/编译原理与语法详解/makefile语法详解/NdkDemo/app/src/main/: AndroidManifest.xml
NDK开发/音视频/: FFmpeg命令详解.md  滤镜解析.md  音视频解码及同步处理.md
NDK开发/音视频/FFmpegDemo/app/: build.gradle
NDK开发/音视频/FFmpegDemo/app/src/main/: AndroidManifest.xml
NDK开发/音视频/FFmpegDemo/app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.h  CMakeLists.txt  FFmpegControl.cpp  FFmpegControl.h  JavaCallHelper.cpp  JavaCallHelper.h  VideoChannel.cpp  VideoChannel.h  audio-lib.cpp  macro.h  native-lib.cpp  safe_queue.h  video-lib.cpp
NDK开发/音视频/FFmpegDemo/gradle/wrapper/: gradle-wrapper.properties
Note/: UI绘制流程及原理.md  事件分发机制详解.md  面试整理.md
Paint和Cavans高级绘制/demo/PaintDemo/app/: build.gradle
Paint和Cavans高级绘制/demo/PaintDemo/app/src/main/: AndroidManifest.xml
Paint和Cavans高级绘制/demo/PaintDemo/gradle/wrapper/: gradle-wrapper.properties
Paint和Cavans高级绘制/note/: Paint画笔高级应用.md
UI绘制流程/: UI绘制流程及原理-2.md
makefile语法详解/: MakeFile走读与语法基础.md
makefile语法详解/NdkDemo/app/: build.gradle
makefile语法详解/NdkDemo/app/src/main/: AndroidManifest.xml
makefile语法详解/NdkDemo/app/src/main/ndkbuild/: Android.mk  hello-jni.c
makefile语法详解/NdkDemo/gradle/wrapper/: gradle-wrapper.properties
屏幕适配/: 屏幕适配—自定义像素适配.md
屏幕适配/AdaptScreen/app/src/main/: AndroidManifest.xml
屏幕适配/AdaptScreen/gradle/wrapper/: gradle-wrapper.properties
架构/Android源码分析/: Handler、Message 源码分析.md
架构/IOC框架设计/: ButterKnife原理分析.md  ButterKnife基本使用.md
架构/RxJava2响应式编程框架/: RxJava初识.md  RxJava操作符（创建操作符）.md  RxJava操作符（变换操作符）.md  RxJava操作符（合并操作符）.md  RxJava操作符（异常操作符）.md  RxJava操作符（过滤操作符、条件操作符）.md  RxJava线程切换.md  RxJava背压模式.md
架构/RxJava2响应式编程框架/RxJavaDemo/app/: build.gradle
架构/RxJava2响应式编程框架/RxJavaDemo/app/src/main/: AndroidManifest.xml
架构/RxJava2响应式编程框架/RxJavaDemo/gradle/wrapper/: gradle-wrapper.properties
架构/UML建模/: AOP面向切面之集中式登录架构设计.md  AOP面向切面架构设计.md
架构/UML建模/AOPDemo/: aspectj-configure.gradle  build.gradle
架构/UML建模/AOPDemo/app/: build.gradle
架构/UML建模/AOPDemo/app/src/main/: AndroidManifest.xml
架构/UML建模/AOPDemo/gradle/wrapper/: gradle-wrapper.properties
架构/换肤/SkinDemo/app/: build.gradle
架构/换肤/SkinDemo/app/src/main/: AndroidManifest.xml
架构/换肤/SkinDemo/gradle/wrapper/: gradle-wrapper.properties
架构/换肤/SkinDemo/skinlibrary/: build.gradle
架构/换肤/SkinDemo/skinlibrary/src/main/: AndroidManifest.xml
架构/换肤/SkinDemo/skinpackage/: build.gradle
架构/换肤/SkinDemo/skinpackage/src/main/: AndroidManifest.xml
架构/框架设计/: MVC架构设计.md  MVP架构设计.md  MVVM架构设计.md
架构/框架设计/MVC-Demo/app/: build.gradle
架构/框架设计/MVC-Demo/app/src/main/: AndroidManifest.xml
架构/框架设计/MVC-Demo/gradle/wrapper/: gradle-wrapper.properties
架构/框架设计/MVP-Demo/app/: build.gradle
架构/框架设计/MVP-Demo/app/src/main/: AndroidManifest.xml
架构/框架设计/MVP-Demo/gradle/wrapper/: gradle-wrapper.properties
架构/框架设计/MVVM-Demo/app/: build.gradle
架构/框架设计/MVVM-Demo/app/src/main/: AndroidManifest.xml
架构/框架设计/MVVM-Demo/gradle/wrapper/: gradle-wrapper.properties
架构/组件化框架设计/: 组件化-APT使用及JavaPoet.md  组件化-gradle语法.md
架构/组件化框架设计/ModularDemo/: config.gradle  settings.gradle
架构/组件化框架设计/ModularDemo/app/: build.gradle
架构/组件化框架设计/ModularDemo/app/src/main/: AndroidManifest.xml
架构/组件化框架设计/ModularDemo/common/: build.gradle
架构/组件化框架设计/ModularDemo/common/src/main/: AndroidManifest.xml
架构/组件化框架设计/ModularDemo/frouter_api/: build.gradle
架构/组件化框架设计/ModularDemo/frouter_api/src/main/: AndroidManifest.xml
架构/组件化框架设计/ModularDemo/frouter_compiler/: build.gradle
架构/组件化框架设计/ModularDemo/gradle/wrapper/: gradle-wrapper.properties
架构/组件化框架设计/ModularDemo/user/: build.gradle
架构/组件化框架设计/ModularDemo/user/src/main/: AndroidManifest.xml
架构/设计模式/: 单例模式.md  设计模式.md
架构/设计模式/DesignPatternDemo/app/: build.gradle
架构/设计模式/DesignPatternDemo/app/src/main/: AndroidManifest.xml
架构/设计模式/DesignPatternDemo/gradle/wrapper/: gradle-wrapper.properties
编译原理与语法详解/CMake详解/: CMakeList.txt文件详解.md  CMake语法详解.md
编译原理与语法详解/CMake详解/CMakeDemo/app/: build.gradle
编译原理与语法详解/CMake详解/CMakeDemo/app/src/main/: AndroidManifest.xml
编译原理与语法详解/CMake详解/CMakeDemo/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
编译原理与语法详解/CMake详解/CMakeDemo/gradle/wrapper/: gradle-wrapper.properties
编译原理与语法详解/makefile语法详解/: 静态库与动态库原理，编译流程详解.md
编译原理与语法详解/makefile语法详解/NdkDemo/gradle/wrapper/: gradle-wrapper.properties
编译原理与语法详解/shell语法详解/: Shell语法.md  变量的定义到使用.md  编译FFmpeg.md
高级UI/ExamDemo/app/: build.gradle
高级UI/ExamDemo/app/src/main/: AndroidManifest.xml
高级UI/ExamDemo/gradle/wrapper/: gradle-wrapper.properties
高级UI/MaterialDesign/: CoordinatorLayout原理及自定义Behavior.md  TabLayout使用.md  Toolbar使用.md
高级UI/MaterialDesign/MaterialDesignDemo/app/: build.gradle
高级UI/MaterialDesign/MaterialDesignDemo/app/src/main/: AndroidManifest.xml
高级UI/MaterialDesign/MaterialDesignDemo/gradle/wrapper/: gradle-wrapper.properties
高级UI/Paint和Cavans高级绘制/note/: Paint画笔高级应用.md
高级UI/UI绘制流程/: UI绘制流程及原理-1.md
高级UI/屏幕适配/AdaptScreen/app/: build.gradle
(+152 files in other folders)
